--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -94,7 +94,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; plocha FEM</a> poskytuje pracovn&iacute; postup pro anal&yacute;zu kone&#269;n&yacute;ch prvk&#367; (FEA).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Material_Workbench.html" title="Material Workbench">Pracovn&iacute; plocha Material</a> zpracov&aacute;v&aacute; syst&eacute;m materi&aacute;l&#367; FreeCADu. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> for working with triangulated meshes.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> pro pr&aacute;ci s troj&uacute;heln&iacute;kov&yacute;mi s&iacute;t&#283;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> for working with geometric primitives and boolean operations.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Part Design Workbench</a> for building Part shapes from sketches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Points_Workbench.html" title="Points Workbench">Points Workbench</a> for working with point clouds.</li></ul>
@@ -151,12 +151,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112025656
+Cached time: 20260112025742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.160 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -167,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.782      1 -total
- 43.64%    6.887      1 Template:Manual:TOC
- 29.48%    4.652      1 Manual:Summary/cs
- 15.83%    2.499      3 Template:Version
- 13.60%    2.147      2 Template:VersionMinus
- 11.28%    1.781      2 Template:Docnav
- 10.96%    1.730      2 Template:MenuCommand
+100.00%   16.245      1 -total
+ 48.94%    7.951      1 Template:Manual:TOC
+ 39.30%    6.384      1 Manual:Summary/cs
+ 15.41%    2.503      2 Template:MenuCommand
+ 14.64%    2.378      2 Template:Docnav
+  8.55%    1.389      3 Template:Version
+  7.69%    1.249      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112025656 and revision id 1736994. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112025741 and revision id 1736996. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
