--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -97,7 +97,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> pro pr&aacute;ci s troj&uacute;heln&iacute;kov&yacute;mi s&iacute;t&#283;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a> pro pr&aacute;ci s geometrick&yacute;mi primitivy a booleovsk&yacute;mi operacemi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; plocha Part Design</a> pro vytv&aacute;&#345;en&iacute; d&iacute;l&#367; na z&aacute;klad&#283; n&aacute;&#269;rt&#367;.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Points_Workbench.html" title="Points Workbench">Pracovn&iacute; plocha Points</a> pro pr&aacute;ci s mra&#269;ny bod&#367;.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Points_Workbench.html" title="Points Workbench">Pracovn&iacute; plocha Points</a> pro pr&aacute;ci s mra&#269;ny bod&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Reverse_Engineering.svg&amp;filetimestamp=20200404173756&amp;.html" class="mw-file-description"><img src="../File/Workbench_Reverse_Engineering.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench">Reverse Engineering Workbench</a> is intended to provide specific tools to convert shapes/solids/meshes into parametric FreeCAD-compatible features.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> for working with geometry-constrained sketches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a> for creating and manipulating spreadsheet data.</li></ul>
@@ -151,12 +151,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112030056
+Cached time: 20260112030106
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.160 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.148 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -167,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.074      1 -total
- 46.39%    6.993      1 Template:Manual:TOC
- 36.06%    5.435      1 Manual:Summary/cs
- 15.85%    2.390      2 Template:Docnav
- 13.03%    1.964      2 Template:VersionMinus
- 10.86%    1.637      3 Template:Version
-  7.87%    1.187      2 Template:MenuCommand
+100.00%   13.574      1 -total
+ 51.63%    7.008      1 Template:Manual:TOC
+ 32.52%    4.414      1 Manual:Summary/cs
+ 13.36%    1.814      2 Template:Docnav
+ 12.11%    1.644      2 Template:VersionMinus
+  9.58%    1.300      3 Template:Version
+  7.77%    1.055      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030056 and revision id 1737002. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030106 and revision id 1737004. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
